# wiggle

./: .gitignore  README.md
frontend/: bun.lockb  example.html  package.json
frontend/public/: model.glb
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: App.tsx  ClothingDropZone.tsx  ImageUploadModal.tsx  LoadingPage.tsx  ModelViewer.tsx  ResultsPage.tsx  WormLogo.tsx
frontend/src/components/icons/: SockIcon.tsx  SweatshirtIcon.tsx
frontend/src/types/: canvas-confetti.d.ts
wiggle/backend/: N8N_DEPLOYMENT_GUIDE.md  README.md  README_TEXTURE.md  add_skeleton_to_shirt.py  app.py  apply_texture_to_model.py  blender_app.py  check_model_structure.py  direct_api.py  modal_integrated_deploy.py  modal_weaviate_api.py  n8n_workflow.json  pyproject.toml  requirements_direct_api.txt  run_direct_api.py  run_texture_apply.sh  test_modal_direct.py  test_n8n_workflow.py  test_webhook.py  weaviate_api.py  weaviate_n8n_helper.py  weaviate_schema.py
wiggle/frontend/: bun.lockb  package-lock.json  package.json
wiggle/frontend/src/app/jelly/: page.tsx
wiggle/frontend/src/components/: ClothPhysicsModel.tsx  JellyModel.tsx  SkeletonClothPhysics.tsx
