[project]
name = "wiggle-backend"
version = "0.1.0"
description = "Backend testing utilities for Wiggle project"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "modal>=0.63.0",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "weaviate-client>=4.17.0",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
    "aiofiles>=25.1.0",
]
